apps/victorialogs/overlays/production/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victorialogs-tailnet
  annotations:
    tailscale.com/proxy-group: ingress-proxies
    tailscale.com/tags: tag:shared-victorialogs
spec:
  defaultBackend:
    service:
      name: victorialogs
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - victorialogs
